Redo upload of last time 8/31/21

--- a/Quote Stylesheet.css
+++ b/Quote Stylesheet.css
@@ -4,10 +4,30 @@ QLineEdit#table{
     min-height: 30px;
     border-radius: 0px;
 }
+QLineEdit#table-parts{
+    font: 14px;
+    max-height: 30px;
+    min-height: 30px;
+    border-radius: 0px;
+}
+QComboBox#table{
+    font: 14px;
+    max-height: 30px;
+    min-height: 30px;
+    max-width: 200px;
+    border-radius: 0px;
+}
 QLineEdit#table-header{
     font: bold 16px;
     max-height: 30px;
     min-height: 30px;
+    border-radius: 0px;
+}
+QLineEdit#header-combo{
+    font: bold 16px;
+    max-height: 30px;
+    min-height: 30px;
+    max-width: 200px;
     border-radius: 0px;
 }
 QLineEdit#customer{
@@ -25,6 +45,13 @@ QLineEdit#invoice{
     max-height: 40px;
     min-width: 450px;
     max-width: 450px;
+}
+QLineEdit#shipping{
+    font: 14px;
+    min-height: 35px;
+    max-height: 35px;
+    min-width: 200px;
+    max-width: 200px;
 }
 
 QLabel#invoice{
@@ -59,6 +86,7 @@ QComboBox{
 
 QPushButton#submit{
     max-height: 30px;
+    min-height: 30px;
     max-width: 200px;
     border-radius: 15px;
     font: bold 15px;
@@ -88,6 +116,10 @@ QLabel{
 
 QCheckBox{
     font: 15px;
+}
+QCheckBox#wire{
+    font: 15px;
+    max-width: 150px;
 }
 
 QComboBox:on {
